@@ -954,6 +954,8 @@ void BaseGui::createActions() {
 	channelsStereoAct = new MyActionGroupItem(this, channelsGroup, "channels_stereo", MediaSettings::ChStereo);
 	channelsSurroundAct = new MyActionGroupItem(this, channelsGroup, "channels_surround", MediaSettings::ChSurround);
 	channelsFull51Act = new MyActionGroupItem(this, channelsGroup, "channels_ful51", MediaSettings::ChFull51);
+	channelsFull61Act = new MyActionGroupItem(this, channelsGroup, "channels_ful61", MediaSettings::ChFull61);
+	channelsFull71Act = new MyActionGroupItem(this, channelsGroup, "channels_ful71", MediaSettings::ChFull71);
 	connect( channelsGroup, SIGNAL(activated(int)),
              core, SLOT(setAudioChannels(int)) );
 
@@ -1760,6 +1762,8 @@ void BaseGui::retranslateStrings() {
 	channelsStereoAct->change( tr("&Stereo") );
 	channelsSurroundAct->change( tr("&4.0 Surround") );
 	channelsFull51Act->change( tr("&5.1 Surround") );
+	channelsFull61Act->change( tr("&6.1 Surround") );
+	channelsFull71Act->change( tr("&7.1 Surround") );
 
 	stereoAct->change( tr("&Stereo") );
 	leftChannelAct->change( tr("&Left channel") );
